
2010-March-1 Struan Robertson

	* MicroRate.cpp,.h, SimpleILT.cpp, MesmerILT.cpp: Elimination of UseILT function and related variables.

2010-February-28 Struan Robertson

	* src/Reaction.cpp,.h and MicroRate.cpp,.h: Initial changes related to removal of ILT data from
        the reaction class and onto the mictrorate calculators. More work is still required to rationalize the
        microrate calculators.

2010-February-21 Struan Robertson

	* src/MolecularComponents.cpp,.h and System.cpp: More minor changes to related to the basis set method.

2010-February-21 Struan Robertson

	* src/MolecularComponents.cpp,.h: Minor changes to related to the basis set method.

2010-Febuary-16 Chris Morley

	Moved derived plugin classes from src to src/plugins. The abstract
	base class header file remains in src.
	
	Provided extra commenting in EnergyTransferModel.h and ExponentialDown.cpp
	as a tutorial for writing plugin classes. Combined ExponentialDown.cpp
	with its header file to make this easier (and also for nefarious
	idealogical reasons).

2010-Febuary-09 Chris Morley

	* src/MicroRate.h,src/MesmerILT.h,src/SimpleILT.h,src/SimpleRRKM.h
	Rework MicroRateCalculator classes to have cloned instances. Read
	the XML data by the class at parse time although rate data is still
	stored (for the time being) in Reaction.

	* src/DensityOfStates.h,src/ClassicalRotor.cpp,src/ClassicalRotor.h,
	src/HinderedRotorA.cpp,src/HinderedRotorA.h,src/QMRotor.cpp,src/QMRotor.h
	Similarly for DensityOfStatesCalculator classes.

	* src/MolecularComponents.cpp,src/MolecularComponents.h:
	Apply the above.

2010-January-23 Struan Robertson

	* Update of QA baselines following changes to exponetial down class.

2010-January-21 Chris Morley

	src/EnergyTransferModel.h,src/ExponentialDown.cpp,src/ExponentialDown.h,
	src/MolecularComponents.cpp,src/MolecularComponents.h:
	Plugin class derived from EnergyTransfer model now provide a new instance